--- a/tests/test.html
+++ b/tests/test.html
@@ -10,7 +10,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
-  <script src= "pathfinding.js"></script>
-  <script src="test/tests.js"></script>
+  <script src= "../pathfinding.js"></script>
+  <script src="tests.js"></script>
 </body>
 </html>
